[gd_scene load_steps=16 format=3 uid="uid://deup3eoe2r6yd"]

[ext_resource type="Texture2D" uid="uid://dftvvuy3y1om3" path="res://Assets/Fondo rojo gris.png" id="1_6va2k"]
[ext_resource type="Script" uid="uid://t73qnt7mqk3c" path="res://gd/galery_2.gd" id="1_rmdp3"]
[ext_resource type="Texture2D" uid="uid://3ndxyqesuf5m" path="res://Assets/Decoracion 1.png" id="3_eu2pl"]
[ext_resource type="PackedScene" uid="uid://b3pr7wuuyjn15" path="res://Assets/Assets animados/sombra_alex_animado.tscn" id="4_k5drk"]
[ext_resource type="Texture2D" uid="uid://d1xr8moy21v5s" path="res://Assets/Marco.png" id="4_l0ylq"]
[ext_resource type="Texture2D" uid="uid://di6aqaoho3ivs" path="res://Assets/Sombra Angela.png" id="6_q4btv"]
[ext_resource type="AudioStream" uid="uid://q8xjah5rwxef" path="res://music/pasar_encima_button.mp3" id="7_bvqcd"]
[ext_resource type="Texture2D" uid="uid://buv5dej0ia122" path="res://Assets/Button.png" id="7_xeodt"]
[ext_resource type="Texture2D" uid="uid://ddi3fejaksy6i" path="res://Assets/Flecha.png" id="8_k5drk"]
[ext_resource type="FontFile" uid="uid://b30c1fih5l3hh" path="res://fonts/THENIGHTLAMP.ttf" id="8_l0ylq"]
[ext_resource type="AudioStream" uid="uid://dchf8xklt234e" path="res://music/Click_Button.mp3" id="8_q4btv"]
[ext_resource type="Texture2D" uid="uid://c38y5rvch2hh1" path="res://Videos/Imagenes videos/Hex girls.jpg" id="12_xeodt"]
[ext_resource type="Texture2D" uid="uid://dtc6xk2ht5kpm" path="res://Videos/Imagenes videos/Luna.png" id="13_k5drk"]
[ext_resource type="Texture2D" uid="uid://d0va81a65ygsr" path="res://Assets/Sombra Angela png.png" id="15_y1pin"]
[ext_resource type="Texture2D" uid="uid://brxj7lqt6uby3" path="res://Assets/Sombra angela 2.png" id="16_o1cj5"]

[node name="Galery 2" type="Node2D"]
script = ExtResource("1_rmdp3")

[node name="FondoRojoGris" type="Sprite2D" parent="."]
position = Vector2(570, 312)
texture = ExtResource("1_6va2k")

[node name="Decoracion1" type="Sprite2D" parent="."]
position = Vector2(373.5, 341.394)
scale = Vector2(1.15948, 1.15948)
texture = ExtResource("3_eu2pl")

[node name="Sombra_Alex_animado" parent="." instance=ExtResource("4_k5drk")]
modulate = Color(0.589096, 0.589096, 0.589096, 1)
position = Vector2(173, 407)

[node name="TextureButtonSombraAngelaInicio" type="TextureButton" parent="."]
offset_left = 793.0
offset_top = 62.0
offset_right = 1122.0
offset_bottom = 307.0
mouse_default_cursor_shape = 2

[node name="Marco2SombraAngelaInicio" type="Sprite2D" parent="TextureButtonSombraAngelaInicio"]
position = Vector2(165, 121)
scale = Vector2(0.273333, 0.273333)
texture = ExtResource("4_l0ylq")

[node name="SombraAngela2" type="Sprite2D" parent="TextureButtonSombraAngelaInicio"]
position = Vector2(214, 118)
scale = Vector2(0.419642, 0.419643)
texture = ExtResource("16_o1cj5")

[node name="SombraAngelaPng" type="Sprite2D" parent="TextureButtonSombraAngelaInicio"]
position = Vector2(110, 120)
scale = Vector2(0.410714, 0.410714)
texture = ExtResource("15_y1pin")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonSombraAngelaInicio"]
stream = ExtResource("7_bvqcd")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButtonSombraAngelaInicio"]
stream = ExtResource("8_q4btv")

[node name="TextureButtonSombraAngela" type="TextureButton" parent="."]
offset_left = 432.0
offset_top = 60.0
offset_right = 758.0
offset_bottom = 305.0
mouse_default_cursor_shape = 2

[node name="SombraAngela" type="Sprite2D" parent="TextureButtonSombraAngela"]
position = Vector2(163, 115)
scale = Vector2(0.268889, 0.268889)
texture = ExtResource("6_q4btv")

[node name="MarcoSombraAngela" type="Sprite2D" parent="TextureButtonSombraAngela"]
position = Vector2(162, 123)
scale = Vector2(0.271389, 0.271389)
texture = ExtResource("4_l0ylq")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonSombraAngela"]
stream = ExtResource("7_bvqcd")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButtonSombraAngela"]
stream = ExtResource("8_q4btv")

[node name="LabelSombraAngelaInicio" type="Label" parent="."]
offset_left = 836.0
offset_top = 304.0
offset_right = 1091.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("8_l0ylq")
theme_override_font_sizes/font_size = 27
text = "Sombra Ángela Inicio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSombraAngela" type="Label" parent="."]
offset_left = 499.0
offset_top = 303.0
offset_right = 710.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("8_l0ylq")
theme_override_font_sizes/font_size = 27
text = "Sombra Ángela"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButtonAtrás" type="TextureButton" parent="."]
offset_left = 25.0
offset_top = 556.0
offset_right = 318.0
offset_bottom = 621.0
mouse_default_cursor_shape = 3

[node name="ButtonAtrás" type="Sprite2D" parent="TextureButtonAtrás"]
position = Vector2(147, 204)
scale = Vector2(0.315918, 1.31875)
texture = ExtResource("7_xeodt")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonAtrás"]
stream = ExtResource("7_bvqcd")
volume_db = -15.928

[node name="TextureButtonHexGirls" type="TextureButton" parent="."]
offset_left = 433.0
offset_top = 353.0
offset_right = 755.0
offset_bottom = 595.0
mouse_default_cursor_shape = 2

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonHexGirls"]
stream = ExtResource("7_bvqcd")
volume_db = -15.928

[node name="MarcoHexGirls" type="Sprite2D" parent="TextureButtonHexGirls"]
position = Vector2(161, 121)
scale = Vector2(0.270013, 0.270013)
texture = ExtResource("4_l0ylq")

[node name="HexGirls" type="Sprite2D" parent="TextureButtonHexGirls/MarcoHexGirls"]
position = Vector2(2.48511, 0.106567)
scale = Vector2(2.00776, 2.00776)
texture = ExtResource("12_xeodt")

[node name="LabelSombraAngelaInicio2" type="Label" parent="."]
offset_left = 473.0
offset_top = 600.0
offset_right = 728.0
offset_bottom = 644.0
theme_override_fonts/font = ExtResource("8_l0ylq")
theme_override_font_sizes/font_size = 27
text = "HEX GIRLS VIDEO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 789.0
offset_top = 346.0
offset_right = 1127.0
offset_bottom = 600.0
mouse_default_cursor_shape = 2

[node name="LabelSombraAngelaInicio3" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 50.0
offset_top = 255.0
offset_right = 305.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("8_l0ylq")
theme_override_font_sizes/font_size = 27
text = "MOON VIDEO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Luna" type="Sprite2D" parent="TextureButton"]
position = Vector2(168.388, 130.938)
scale = Vector2(0.231787, 0.231787)
texture = ExtResource("13_k5drk")

[node name="MarcoLuna" type="Sprite2D" parent="TextureButton"]
position = Vector2(169, 128)
scale = Vector2(0.282778, 0.282778)
texture = ExtResource("4_l0ylq")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButton"]
stream = ExtResource("7_bvqcd")
volume_db = -15.928

[node name="Flecha" type="Sprite2D" parent="."]
position = Vector2(176, 586)
scale = Vector2(0.214286, 0.146214)
texture = ExtResource("8_k5drk")

[connection signal="mouse_entered" from="TextureButtonSombraAngelaInicio" to="." method="_on_texture_button_sombra_angela_inicio_mouse_entered"]
[connection signal="pressed" from="TextureButtonSombraAngelaInicio" to="." method="_on_texture_button_sombra_angela_inicio_pressed"]
[connection signal="ready" from="TextureButtonSombraAngelaInicio/Click_Button" to="." method="_on_click_button_ready"]
[connection signal="mouse_entered" from="TextureButtonSombraAngela" to="." method="_on_texture_button_sombra_angela_mouse_entered"]
[connection signal="pressed" from="TextureButtonSombraAngela" to="." method="_on_texture_button_sombra_angela_pressed"]
[connection signal="ready" from="TextureButtonSombraAngela/Click_Button" to="." method="_on_click_button_ready"]
[connection signal="mouse_entered" from="TextureButtonAtrás" to="." method="_on_texture_button_atrás_mouse_entered"]
[connection signal="pressed" from="TextureButtonAtrás" to="." method="_on_texture_button_atrás_pressed"]
[connection signal="mouse_entered" from="TextureButtonHexGirls" to="." method="_on_texture_button_hex_girls_mouse_entered"]
[connection signal="pressed" from="TextureButtonHexGirls" to="." method="_on_texture_button_hex_girls_pressed"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
